Add validation for PMD language name and version and add '--enable-preview' when a preview version is specified
Signed-off-by: David Op de Beeck <davidopdebeeck@outlook.be>